Corrected .glaceon z-index
Glaceon no longer disappears behind the "shelf" thing.

--- a/main.css
+++ b/main.css
@@ -204,7 +204,7 @@ code {
 	background-size: contain;
 	background-repeat: no-repeat;
 	position: absolute;
-	z-index: -5;
+	z-index: 5;
 }
 	
 .shelfContainer {
